--- a/browser/resources/settings/brave_ipfs_page/brave_ipfs_page.html
+++ b/browser/resources/settings/brave_ipfs_page/brave_ipfs_page.html
@@ -68,7 +68,8 @@
       class="cr-row"
       pref="{{prefs.brave.ipfs.auto_redirect_to_configured_gateway}}"
       label="$i18n{ipfsAutoRedirectToGatewayWhenPossibleLabel}"
-      sub-label="$i18n{ipfsAutoRedirectToGatewayWhenPossibleDesc}">
+      sub-label="$i18n{ipfsAutoRedirectToGatewayWhenPossibleDesc}"
+      learn-more-url="$i18n{ipfsDNSLinkLearnMoreURL}">
     </settings-toggle-button>
 
     <settings-toggle-button id="ipfsCompanionEnabled"
