Fix brave/brave-ios#7532: Support reader mode text direction when Readability detects it (brave/brave-ios#7722)
This adds support for RTL reader mode by grabbing it from the parsed readability result. This unfortunately only works when the page itself annotates using the `dir` attribute in their HTML and not when pages use CSS to specifically mark pieces of their content as RTL

--- a/Sources/Brave/Frontend/Reader/Reader.html
+++ b/Sources/Brave/Frontend/Reader/Reader.html
@@ -12,7 +12,7 @@
   <title id="reader-page-title"></title>
 </head>
 
-<body>
+<body dir="%READER-DIRECTION%">
   <div id="reader-header" class="header">
     <h1 id="reader-title"></h1>
     <div id="reader-credits" class="credits"></div>
