--- a/browser/resources/settings/brave_leo_assistant_page/brave_leo_assistant_page.html
+++ b/browser/resources/settings/brave_leo_assistant_page/brave_leo_assistant_page.html
@@ -10,8 +10,8 @@
   pref="{{prefs.brave.ai_chat.auto_generate_questions}}"
   label="$i18n{braveLeoAssistantShowSuggestedPromptsLabel}">
 </settings-toggle-button>
-<div class="settings-box " on-click="onResetAssistanceData_">
+<div class="settings-box " on-click="onResetAssistantData_">
     <div class="flex cr-padded-text reset-wallet">
-      <div>$i18n{braveLeoAssistantResetAndClearDatasLabel}</div>
+      <div>$i18n{braveLeoAssistantResetAndClearDataLabel}</div>
     </div>
 </div>
