fixes for code review
Signed-off-by: Vadym Struts <vstruts@brave.com>

--- a/browser/resources/settings/brave_leo_assistant_page/brave_leo_assistant_page.html
+++ b/browser/resources/settings/brave_leo_assistant_page/brave_leo_assistant_page.html
@@ -1,4 +1,8 @@
-<link rel="import" href="chrome://resources/cr_elements/md_select.css.html">
+<!-- Copyright (c) 2023 The Brave Authors. All rights reserved.
+This Source Code Form is subject to the terms of the Mozilla Public
+License, v. 2.0. If a copy of the MPL was not distributed with this file,
+You can obtain one at https://mozilla.org/MPL/2.0/. -->
+
 <style include="settings-shared md-select iron-flex">
 </style>
 <settings-toggle-button class="cr-row hr"
