Register Wireguard service

--- a/browser/resources/settings/brave_system_page/brave_vpn_page.html
+++ b/browser/resources/settings/brave_system_page/brave_vpn_page.html
@@ -16,7 +16,7 @@
         label="$i18n{useWireguardLabel}"
         sub-label="[[toggleWireguardSubLabel_]]"
         disabled="[[braveVpnConnected_]]"
-        on-change="updateState">
+        on-change="onChange_">
       <template is="dom-if" if="[[shouldShowRestart_]]">
         <cr-button on-click="onRestartClick_" slot="more-actions">
           $i18n{restart}
