Fix review comments

--- a/browser/resources/settings/brave_system_page/brave_vpn_page.html
+++ b/browser/resources/settings/brave_system_page/brave_vpn_page.html
@@ -1,4 +1,4 @@
-<if expr="enable_brave_vpn">
+<if expr="enable_brave_vpn and is_win">
 <style include="settings-shared cr-shared-style iron-flex">
   .title {
     font-size: 14px;
