Add separate pref for Web Discovery native

--- a/browser/resources/settings/brave_search_engines_page/brave_search_engines_page.html
+++ b/browser/resources/settings/brave_search_engines_page/brave_search_engines_page.html
@@ -18,13 +18,26 @@
   </settings-toggle-button>
 </template>
 <if expr="enable_extensions">
-<settings-toggle-button id="webDiscoveryEnabled"
-    class="cr-row"
-    pref="{{prefs.brave.web_discovery_enabled}}"
-    label="$i18n{braveWebDiscoveryLabel}"
-    sub-label="$i18n{braveWebDiscoverySubLabel}"
-    learn-more-url="$i18n{webDiscoveryLearnMoreURL}">
-</settings-toggle-button>
+<template is="dom-if" if="[[!isWebDiscoveryNativeEnabled_()]]" restamp>
+  <settings-toggle-button id="webDiscoveryEnabledExtension"
+      class="cr-row"
+      pref="{{prefs.brave.web_discovery_enabled}}"
+      label="$i18n{braveWebDiscoveryLabel}"
+      sub-label="$i18n{braveWebDiscoverySubLabel}"
+      learn-more-url="$i18n{webDiscoveryLearnMoreURL}">
+  </settings-toggle-button>
+</template>
+</if>
+<if expr="enable_web_discovery_native">
+<template is="dom-if" if="[[isWebDiscoveryNativeEnabled_()]]" restamp>
+  <settings-toggle-button id="webDiscoveryEnabledNative"
+      class="cr-row"
+      pref="{{prefs.brave.web_discovery.wdp_native_enabled}}"
+      label="$i18n{braveWebDiscoveryLabel}"
+      sub-label="$i18n{braveWebDiscoverySubLabel}"
+      learn-more-url="$i18n{webDiscoveryLearnMoreURL}">
+  </settings-toggle-button>
+</template>
 </if>
 <settings-toggle-button id="otherSearchEnginesEnabled"
     class="cr-row"
