feat(wallet): remove Goerli network

--- a/test/data/brave-wallet/brave_wallet_event_emitter.html
+++ b/test/data/brave-wallet/brave_wallet_event_emitter.html
@@ -8,7 +8,7 @@
     received_connect_event = true
   });
   window.ethereum.on('chainChanged', function(chainId) {
-    received_chain_changed_event = chainId == '0x5'
+    received_chain_changed_event = chainId == '0xaa36a7'
   });
   window.ethereum.on('accountsChanged', function(accounts) {
     received_account_changed_event = true
