--- a/test/data/reporting_observer.html
+++ b/test/data/reporting_observer.html
@@ -1,11 +1,21 @@
 <script>
-  function isReportingObserverDisabled() {
+  function isReportingObserverNoop() {
     try {
-      new ReportingObserver(function(reports, observer) {
-      	return false;
-	  }, {});
-    } catch (err) {
-      return true;
+      const observer = new ReportingObserver(() => {},
+        { types: ['deprecation'], buffered: true }
+      );
+      observer.observe();
+      const xhr = new XMLHttpRequest();
+      // false makes it synchronous, which is deprecated.
+      xhr.open('GET', '/', false);
+      xhr.send(null);
+      const reports = observer.takeRecords();
+      console.log("Reports:", reports);
+      // Even though we made a synchronous request, we should not have any reports.
+      return reports.length === 0;
+    } catch (error) {
+      console.error("Error occurred:", error);
+      return false;
     }
   }
 </script>
