--- a/ios/brave-ios/Sources/Brave/Assets/About/Licenses.html
+++ b/ios/brave-ios/Sources/Brave/Assets/About/Licenses.html
@@ -835,8 +835,10 @@ limitations under the License.</p>
 <p class="center">-</p>
 
 <div>
-  <input id="ac-darkreader" name="accordion-1" type="checkbox" />
-  <label for="ac-darkreader"><h2>DarkReader</h2></label>
+  <label>
+    <input id="ac-darkreader" name="accordion-1" type="checkbox"></input>
+    <h2>DarkReader</h2>
+  </label>
   <article>
     <p class="link"><a href="https://github.com/darkreader/darkreader">github.com/darkreader/darkreader</a></p>
     <div class="text">
