[Icons]: Remove old icon overrides

--- a/browser/resources/settings/brave_leo_assistant_page/model_config_ui.html
+++ b/browser/resources/settings/brave_leo_assistant_page/model_config_ui.html
@@ -92,7 +92,7 @@
               kind="plain-faint"
               fab
             >
-              <cr-icon icon="brave_settings18:info"></cr-icon>
+              <cr-icon icon="info-outline"></cr-icon>
             </leo-button>
           </leo-tooltip>
         </div>
